minio/minio-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: test-minio-tenant-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: miniost.vsamtuc.top
    http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: cminiost.vsamtuc.top
    http:
      paths:
      - backend:
          service:
            name: test-minio-tenant-console
            port:
              number: 9443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - miniost.vsamtuc.top
    - cminiost.vsamtuc.top
    secretName: test-minio-tenant-tls
